--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
-  margin: 0, auto;
+  margin: auto;
   padding: 0;
   font-family: sans-serif;
   width: 90%;
-  height: 100%;
+  height: 90%;
 }
