--- a/src/HokenList.css
+++ b/src/HokenList.css
@@ -1,10 +1,8 @@
 .header{
   width: 100vw;
-  height: 10vh;
-  margin-bottom: 5vh;
+  position: fixed;  
+  top: 0;  
+  left: 0;  
+  z-index: 10;
 }
 
-.hokenList{
-  width: 100vw;
-  overflow: hidden;
-}
